--- a/templates/car/details.html.twig
+++ b/templates/car/details.html.twig
@@ -1,40 +1,8 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{ vehicle.brand }} - {{ vehicle.model }}{% endblock %}
-
-{% block body %}
-<div class="my-4 px-8">
-    <a class="bg-white hover:bg-gray-200 rounded-xl p-2 text-black" href="{{ path('car_list') }}">
-        <svg class="inline text-black" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512">
-            <path fill="#000" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/>
-        </svg>
-        Back
-    </a>
-</div>
-<div class="md:flex justify-center space-x-3 mt-5 px-4 lg:px-8">
-    <div class="flex justify-center">
-        <img class="h-[400px] w-[400px]" src="{{ asset('images/car.png') }}" alt="car image">
-    </div>
-    <div class="space-y-5">
-        <div class="mt-8 max-w-xl mx-auto">
-            <div class="px-8 pt-8">
-                <h1 class="text-[32px] font-semibold border-b border-white/10 pb-5 mb-5">
-                    {{ vehicle.brand }} - {{ vehicle.model }}
-                </h1>
-
-                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Engine Capacity</h4>
-                <p class="text-[22px] font-semibold">{{ vehicle.engineCapacity }} L</p>
-
-                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Colour</h4>
-                <p class="text-[22px] font-semibold">{{ vehicle.colour }}</p>
-
-                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Price</h4>
-                <p class="text-[22px] font-semibold">${{ vehicle.price }}</p>
-
-                <h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Quantity</h4>
-                <p class="text-[22px] font-semibold">{{ vehicle.quantity }}</p>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
+<h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Engine Capacity</h4>
+<p class="text-[22px] font-semibold">{{ vehicle.engineCapacity }} L</p>
+<h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Colour</h4>
+<p class="text-[22px] font-semibold">{{ vehicle.colour }}</p>
+<h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Number of doors</h4>
+<p class="text-[22px] font-semibold">{{ vehicle.doorNumbers }}</p>
+<h4 class="text-xs text-slate-300 font-semibold mt-2 uppercase">Car Category</h4>
+<p class="text-[22px] font-semibold">{{ vehicle.carCategory }}</p>
